src/objects/CventEvents__RecordTypeMatchingSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores SF record types which are used during record matching process.</description>
    <fields>
        <fullName>CventEvents__IsForMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record type is enforced during record matching.</description>
        <inlineHelpText>Indicates whether this record type is enforced during record matching.</inlineHelpText>
        <label>Is For Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsForNewRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record type is used for new records creation.</description>
        <inlineHelpText>Indicates whether this record type is used for new records creation.</inlineHelpText>
        <label>Is For New Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Object__c</fullName>
        <description>Salesforce object API name.</description>
        <inlineHelpText>Salesforce object API name.</inlineHelpText>
        <label>Object</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Type Matching Settings</label>
</CustomObject>